samples/_failures_safe/1761511457_9e10fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60742af4.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_60742af4.c:156:9: error: expected ‘;’ at end of input
  156 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_60742af4.c:156:5: error: expected declaration or statement at end of input
  156 |     free
      |     ^~~~
